# Extension

./: .gitignore  BUILD.md  Build.txt  CONTRIBUTING.md  Design.txt  LICENSE  README.md  README_FF_TESTING.md  README_RIOT_RSO.md  SECURITY.md  background.html  background.js  build-manifest.js  callback.html  content.js  leaderboard.txt  loading.html  manifest-chrome.json  manifest-firefox.json  manifest.json  pack-firefox.sh  popup.html  popup.js  styles.css  twitch-callback.html  twitch-error.html  twitch-success.html
Notes/: Build.txt  Database.txt  Design.txt  ErrorChanges.txt  Future.txt  NextSteps.txt  RankDisplay.txt  Refresh.txt  RiotAuthFlow.txt  RiotDocs.txt  Test.txt
betterTTV/: manifest.json
betterTTV/_locales/fr/: messages.json
betterTTV/_locales/nl/: messages.json
betterTTV/_locales/tr/: messages.json
betterTTV/_locales/uk/: messages.json
betterTTV/_metadata/: verified_contents.json
competitor/: popup.html  service-worker.js
competitor/firebaseSDK/: firebase-auth.js  firebase-database.js
competitor/recaptcha/: api.js  enterprise.js
css/: content.css  popup.css
eloward-obs/: CMakeLists.txt  README.md  buildspec.json
eloward-obs/data/: eloward-rank-badges.js
eloward-obs/data/locale/: en-US.ini
eloward-obs/src/: plugin-main.c
eloward-rank-badges/: CMakeLists.txt  README.md  eloward-rank-badges.c  eloward-rank-badges.js  install_mac.sh  install_windows.bat  rank-badge-injector.c
eloward-rank-badges-working/: README.md  eloward-rank-badges.c
eloward-rank-badges-working/data/locale/: en-US.ini
example/: displayrank.js  getChessUsername.js  getLeagueUsername.js  getSteamUsername.js  getTrackerUsername.js  info.html  info.js  manifest.json  popup.css  popup.js
example/_metadata/: verified_contents.json
example/firebaseSDK/: firebase-app.js
example/functions/: index.js  package-lock.json
ext/: background.js  content.js  manifest.json
ext/js/: config.js  rankAPI.js
js/: auth-redirect-handler.js  config.js  extensionBridge.js  persistentStorage.js  popup.js  rankAPI.js  rankService.js  riotAuth.js  test.js  twitch-callback.js  twitchAuth.js
js/auth/: riotAuth.js  twitchAuth.js
js/background/: background.js
js/content/: content.js  viewer-stats.js
js/core/: extensionBridge.js  persistentStorage.js
obs/eloward-rank-badges/: CMakeLists.txt  README.md  eloward-rank-badges.js
obs/eloward-rank-badges/data/locale/: en-US.ini
scripts/: build-manifest.js  manifest-chrome.json  pack-chrome.sh  pack-firefox.sh
